# internal/web/apidoc/docs/swagger.yaml
@@ -570,109 +570,6 @@ definitions:
       name:
         type: string
     type: object
-  category.ArchiveCategoryRequest:
-    properties:
-      id:
-        type: string
-    type: object
-  category.ArchiveCategoryResult:
-    type: object
-  category.CategoryResult:
-    properties:
-      createdAt:
-        type: string
-      icon:
-        type: string
-      id:
-        type: string
-      isArchived:
-        type: integer
-      name:
-        type: string
-      ownerUserId:
-        type: string
-      position:
-        type: integer
-      type:
-        type: string
-      updatedAt:
-        type: string
-    type: object
-  category.CreateCategoryRequest:
-    properties:
-      accountId:
-        type: string
-      icon:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
-      type:
-        type: string
-    type: object
-  category.CreateCategoryResult:
-    properties:
-      item:
-        $ref: '#/definitions/category.CategoryResult'
-    type: object
-  category.DeleteCategoryRequest:
-    properties:
-      id:
-        type: string
-      mode:
-        type: string
-      replaceId:
-        type: string
-    type: object
-  category.DeleteCategoryResult:
-    type: object
-  category.GetCategoryListResult:
-    properties:
-      items:
-        items:
-          $ref: '#/definitions/category.CategoryResult'
-        type: array
-    type: object
-  category.OrderCategoryListRequest:
-    properties:
-      changes:
-        items:
-          $ref: '#/definitions/category.PositionChange'
-        type: array
-    type: object
-  category.OrderCategoryListResult:
-    properties:
-      items:
-        items:
-          $ref: '#/definitions/category.CategoryResult'
-        type: array
-    type: object
-  category.PositionChange:
-    properties:
-      id:
-        type: string
-      position:
-        type: integer
-    type: object
-  category.UnarchiveCategoryRequest:
-    properties:
-      id:
-        type: string
-    type: object
-  category.UnarchiveCategoryResult:
-    type: object
-  category.UpdateCategoryRequest:
-    properties:
-      icon:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
-    type: object
-  category.UpdateCategoryResult:
-    type: object
   connection.AcceptInviteRequest:
     properties:
       code:
@@ -809,6 +706,34 @@ definitions:
       type:
         type: integer
     type: object
+  model.ArchiveCategoryRequest:
+    properties:
+      id:
+        type: string
+    type: object
+  model.ArchiveCategoryResult:
+    type: object
+  model.CategoryResult:
+    properties:
+      createdAt:
+        type: string
+      icon:
+        type: string
+      id:
+        type: string
+      isArchived:
+        type: integer
+      name:
+        type: string
+      ownerUserId:
+        type: string
+      position:
+        type: integer
+      type:
+        type: string
+      updatedAt:
+        type: string
+    type: object
   model.CompleteOnboardingResult:
     properties:
       user:
@@ -862,6 +787,24 @@ definitions:
         $ref: '#/definitions/model.AccountResult'
       transaction:
         $ref: '#/definitions/model.CorrectionResult'
+    type: object
+  model.CreateCategoryRequest:
+    properties:
+      accountId:
+        type: string
+      icon:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      type:
+        type: string
+    type: object
+  model.CreateCategoryResult:
+    properties:
+      item:
+        $ref: '#/definitions/model.CategoryResult'
     type: object
   model.CreateFolderRequest:
     properties:
@@ -923,6 +866,17 @@ definitions:
     type: object
   model.DeleteAccountResult:
     type: object
+  model.DeleteCategoryRequest:
+    properties:
+      id:
+        type: string
+      mode:
+        type: string
+      replaceId:
+        type: string
+    type: object
+  model.DeleteCategoryResult:
+    type: object
   model.FolderPositionChange:
     properties:
       id:
@@ -935,6 +889,13 @@ definitions:
       items:
         items:
           $ref: '#/definitions/model.AccountResult'
+        type: array
+    type: object
+  model.GetCategoryListResult:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/model.CategoryResult'
         type: array
     type: object
   model.GetCurrencyListResult:
@@ -1017,6 +978,20 @@ definitions:
           $ref: '#/definitions/model.AccountResult'
         type: array
     type: object
+  model.OrderCategoryListRequest:
+    properties:
+      changes:
+        items:
+          $ref: '#/definitions/model.PositionChange'
+        type: array
+    type: object
+  model.OrderCategoryListResult:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/model.CategoryResult'
+        type: array
+    type: object
   model.OrderFolderListRequest:
     properties:
       changes:
@@ -1030,6 +1005,13 @@ definitions:
         items:
           $ref: '#/definitions/model.AccountFolderResult'
         type: array
+    type: object
+  model.PositionChange:
+    properties:
+      id:
+        type: string
+      position:
+        type: integer
     type: object
   model.RegisterRequest:
     properties:
@@ -1081,6 +1063,13 @@ definitions:
     type: object
   model.ShowFolderResult:
     type: object
+  model.UnarchiveCategoryRequest:
+    properties:
+      id:
+        type: string
+    type: object
+  model.UnarchiveCategoryResult:
+    type: object
   model.UpdateAccountRequest:
     properties:
       balance:
@@ -1112,6 +1101,17 @@ definitions:
     properties:
       user:
         $ref: '#/definitions/model.CurrentUserResult'
+    type: object
+  model.UpdateCategoryRequest:
+    properties:
+      icon:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  model.UpdateCategoryResult:
     type: object
   model.UpdateCurrencyRequest:
     properties:
@@ -2702,7 +2702,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/category.ArchiveCategoryRequest'
+          $ref: '#/definitions/model.ArchiveCategoryRequest'
       produces:
       - application/json
       responses:
@@ -2713,7 +2713,7 @@ paths:
             - $ref: '#/definitions/apidoc.JsonResponseOk'
             - properties:
                 data:
-                  $ref: '#/definitions/category.ArchiveCategoryResult'
+                  $ref: '#/definitions/model.ArchiveCategoryResult'
               type: object
         "400":
           description: Bad Request
@@ -2744,7 +2744,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/category.CreateCategoryRequest'
+          $ref: '#/definitions/model.CreateCategoryRequest'
       produces:
       - application/json
       responses:
@@ -2755,7 +2755,7 @@ paths:
             - $ref: '#/definitions/apidoc.JsonResponseOk'
             - properties:
                 data:
-                  $ref: '#/definitions/category.CreateCategoryResult'
+                  $ref: '#/definitions/model.CreateCategoryResult'
               type: object
         "400":
           description: Bad Request
@@ -2786,7 +2786,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/category.DeleteCategoryRequest'
+          $ref: '#/definitions/model.DeleteCategoryRequest'
       produces:
       - application/json
       responses:
@@ -2797,7 +2797,7 @@ paths:
             - $ref: '#/definitions/apidoc.JsonResponseOk'
             - properties:
                 data:
-                  $ref: '#/definitions/category.DeleteCategoryResult'
+                  $ref: '#/definitions/model.DeleteCategoryResult'
               type: object
         "400":
           description: Bad Request
@@ -2830,7 +2830,7 @@ paths:
             - $ref: '#/definitions/apidoc.JsonResponseOk'
             - properties:
                 data:
-                  $ref: '#/definitions/category.GetCategoryListResult'
+                  $ref: '#/definitions/model.GetCategoryListResult'
               type: object
         "401":
           description: Unauthorized
@@ -2857,7 +2857,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/category.OrderCategoryListRequest'
+          $ref: '#/definitions/model.OrderCategoryListRequest'
       produces:
       - application/json
       responses:
@@ -2868,7 +2868,7 @@ paths:
             - $ref: '#/definitions/apidoc.JsonResponseOk'
             - properties:
                 data:
-                  $ref: '#/definitions/category.OrderCategoryListResult'
+                  $ref: '#/definitions/model.OrderCategoryListResult'
               type: object
         "400":
           description: Bad Request
@@ -2898,7 +2898,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/category.UnarchiveCategoryRequest'
+          $ref: '#/definitions/model.UnarchiveCategoryRequest'
       produces:
       - application/json
       responses:
@@ -2909,7 +2909,7 @@ paths:
             - $ref: '#/definitions/apidoc.JsonResponseOk'
             - properties:
                 data:
-                  $ref: '#/definitions/category.UnarchiveCategoryResult'
+                  $ref: '#/definitions/model.UnarchiveCategoryResult'
               type: object
         "400":
           description: Bad Request
@@ -2939,7 +2939,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/category.UpdateCategoryRequest'
+          $ref: '#/definitions/model.UpdateCategoryRequest'
       produces:
       - application/json
       responses:
@@ -2950,7 +2950,7 @@ paths:
             - $ref: '#/definitions/apidoc.JsonResponseOk'
             - properties:
                 data:
-                  $ref: '#/definitions/category.UpdateCategoryResult'
+                  $ref: '#/definitions/model.UpdateCategoryResult'
               type: object
         "400":
           description: Bad Request
